# duckdb

./: CMakeLists.txt  TODO  meson.build  meson.options
scripts/: convert-cmake-to-meson.py
src/: meson.build
src/catalog/: meson.build
src/catalog/catalog_entry/: meson.build
src/catalog/catalog_entry/dependency/: meson.build
src/catalog/default/: meson.build
src/common/: meson.build
src/common/adbc/: meson.build
src/common/adbc/nanoarrow/: meson.build
src/common/arrow/: meson.build
src/common/arrow/appender/: meson.build
src/common/crypto/: meson.build
src/common/enums/: meson.build
src/common/exception/: meson.build
src/common/operator/: meson.build
src/common/progress_bar/: meson.build
src/common/row_operations/: meson.build
src/common/serializer/: meson.build
src/common/sort/: meson.build
src/common/tree_renderer/: meson.build
src/common/types/: meson.build
src/common/types/column/: meson.build
src/common/types/row/: meson.build
src/common/value_operations/: meson.build
src/common/vector_operations/: meson.build
src/execution/: meson.build
src/execution/expression_executor/: meson.build
src/execution/index/: meson.build
src/execution/index/art/: meson.build
src/execution/nested_loop_join/: meson.build
src/execution/operator/: meson.build
src/execution/operator/aggregate/: meson.build
src/execution/operator/csv_scanner/: meson.build
src/execution/operator/csv_scanner/buffer_manager/: meson.build
src/execution/operator/csv_scanner/encode/: meson.build
src/execution/operator/csv_scanner/scanner/: meson.build
src/execution/operator/csv_scanner/sniffer/: meson.build
src/execution/operator/csv_scanner/state_machine/: meson.build
src/execution/operator/csv_scanner/table_function/: meson.build
src/execution/operator/csv_scanner/util/: meson.build
src/execution/operator/filter/: meson.build
src/execution/operator/helper/: meson.build
src/execution/operator/join/: meson.build
src/execution/operator/order/: meson.build
src/execution/operator/persistent/: meson.build
src/execution/operator/projection/: meson.build
src/execution/operator/scan/: meson.build
src/execution/operator/schema/: meson.build
src/execution/operator/set/: meson.build
src/execution/physical_plan/: meson.build
src/function/: meson.build
src/function/aggregate/: meson.build
src/function/aggregate/distributive/: meson.build
src/function/cast/: meson.build
src/function/cast/union/: meson.build
src/function/pragma/: meson.build
src/function/scalar/: meson.build
src/function/scalar/compressed_materialization/: meson.build
src/function/scalar/date/: meson.build
src/function/scalar/generic/: meson.build
src/function/scalar/list/: meson.build
src/function/scalar/map/: meson.build
src/function/scalar/operator/: meson.build
src/function/scalar/sequence/: meson.build
src/function/scalar/string/: meson.build
src/function/scalar/string/regexp/: meson.build
src/function/scalar/struct/: meson.build
src/function/scalar/system/: meson.build
src/function/table/: arrow.cpp  meson.build
src/function/table/arrow/: meson.build
src/function/table/system/: meson.build
src/function/table/version/: meson.build
src/include/duckdb/common/arrow/: arrow.hpp  arrow_util.hpp  arrow_wrapper.hpp
src/include/duckdb/function/: table_function.hpp
src/include/duckdb/function/table/: arrow.hpp
src/include/duckdb/function/table/arrow/: arrow_duck_schema.hpp
src/include/duckdb/main/: connection.hpp
src/main/: connection.cpp  meson.build
src/main/buffered_data/: meson.build
src/main/capi/: meson.build
src/main/capi/cast/: meson.build
src/main/chunk_scan_state/: meson.build
src/main/extension/: CMakeLists.txt  generated_extension_headers.hpp.in  generated_extension_loader.cpp.in  meson.build
src/main/relation/: meson.build
src/main/secret/: meson.build
src/main/settings/: meson.build
src/optimizer/: meson.build
src/optimizer/compressed_materialization/: meson.build
src/optimizer/join_order/: meson.build
src/optimizer/matcher/: meson.build
src/optimizer/pullup/: meson.build
src/optimizer/pushdown/: meson.build
src/optimizer/rule/: meson.build
src/optimizer/statistics/: meson.build
src/optimizer/statistics/expression/: meson.build
src/optimizer/statistics/operator/: meson.build
src/parallel/: executor.cpp  meson.build
src/parser/: meson.build
src/parser/constraints/: meson.build
src/parser/expression/: meson.build
src/parser/parsed_data/: meson.build
src/parser/query_node/: meson.build
src/parser/statement/: meson.build
src/parser/tableref/: meson.build
src/parser/transform/: meson.build
src/parser/transform/constraint/: meson.build
src/parser/transform/expression/: meson.build
src/parser/transform/helpers/: meson.build
src/parser/transform/statement/: meson.build
src/parser/transform/tableref/: meson.build
src/planner/: meson.build
src/planner/binder/: meson.build
src/planner/binder/expression/: meson.build
src/planner/binder/query_node/: meson.build
src/planner/binder/statement/: meson.build
src/planner/binder/tableref/: meson.build
src/planner/expression/: meson.build
src/planner/expression_binder/: meson.build
src/planner/filter/: meson.build
src/planner/operator/: meson.build
src/planner/subquery/: meson.build
src/storage/: meson.build
src/storage/buffer/: meson.build
src/storage/checkpoint/: meson.build
src/storage/compression/: meson.build
src/storage/compression/alp/: meson.build
src/storage/compression/chimp/: meson.build
src/storage/metadata/: meson.build
src/storage/serialization/: meson.build
src/storage/statistics/: meson.build
src/storage/table/: meson.build
src/transaction/: meson.build
src/verification/: meson.build
tools/pythonpkg/src/: pyconnection.cpp
tools/pythonpkg/src/include/duckdb_python/pyconnection/: pyconnection.hpp
